RunThese30M.java failed due to "assert(false) failed: graph should be schedulable"

XMLWordPrintable

    • b13
    • x86_64
    • linux
    • Verified

      The following test failed in the JDK15 CI:

      applications/runthese/RunThese30M.java

      Here's a snippet from the log file:

      thrd2 caught an IEException
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/opto/gcm.cpp:1352), pid=1466, tid=1482
      # assert(false) failed: graph should be schedulable
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+11) (fastdebug build 15-ea+11-349)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+11-349, compiled mode, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xb18858] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xa58
      #
      # Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S796/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fa0d7562-dfad-4aab-8172-c002e6719bf8/runs/b7206c60-e759-4c5a-90b9-507fad1428dc/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/core.1466
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # /scratch/opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S796/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fa0d7562-dfad-4aab-8172-c002e6719bf8/runs/b7206c60-e759-4c5a-90b9-507fad1428dc/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/hs_err_pid1466.log
      #
      # Compiler replay data is saved as:
      # /scratch/opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S796/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fa0d7562-dfad-4aab-8172-c002e6719bf8/runs/b7206c60-e759-4c5a-90b9-507fad1428dc/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/replay_pid1466.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(143/12730)----------


      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x00007f592854b000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=1482, stack(0x00007f5570013000,0x00007f5570114000)]


      Current CompileTask:
      C2: 822625 107719 !b javasoft.sqe.tests.lang.clss147.clss14702.clss14702::m3 (90 bytes)

      Stack: [0x00007f5570013000,0x00007f5570114000], sp=0x00007f557010ecf0, free space=1007k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xb18858] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xa58
      V [libjvm.so+0xb18d66] PhaseCFG::global_code_motion()+0x306
      V [libjvm.so+0xb1b001] PhaseCFG::do_global_code_motion()+0x51
      V [libjvm.so+0x867e62] Compile::Code_Gen()+0x282
      V [libjvm.so+0x86bfd1] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1171
      V [libjvm.so+0x6d9840] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x110
      V [libjvm.so+0x878aec] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2cc
      V [libjvm.so+0x879a88] CompileBroker::compiler_thread_loop()+0x458
      V [libjvm.so+0x1525846] JavaThread::thread_main_inner()+0x226
      V [libjvm.so+0x152a9c6] Thread::call_run()+0xf6
      V [libjvm.so+0x125d3de] thread_native_entry(Thread*)+0x10e

            Assignee:
            Roland Westrelin
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: