8239367: RunThese30M.java failed due to "assert(false) failed: graph should be schedulable"

Reviewed-by: thartmann, vlivanov, neliasso